--- a/FreiRui/templates/post/list.html
+++ b/FreiRui/templates/post/list.html
@@ -6,7 +6,7 @@
     <div class="date">
         {{ post.published_date }}
     </div>
-    <h2><a href="{% url 'post_details' pk=post.pk %}">{{ post.title }}</a></h2>
+    <h2><a href="{% url 'post_details' category=post.category pk=post.pk %}">{{ post.title }}</a></h2>
     <p class="post-cruncher">{{ post.text }}</p>
 </div>
 {% endfor %}
