--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -4,10 +4,21 @@
 
 <head>
     <title>Django Girls blog</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet'
-        type='text/css'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
+        integrity="sha384-WXEe6SF/LiwudzPd11Un4jynGE1igNY+6Y8rW2kwxHx7tUFELlXsc+Tm1bnmCg6Q" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.3.0/markdown-it.min.js"
         integrity="sha512-q1tclxbgrDhFhGp/i9mnxITl2FQ3TCfwNj0mZ1r2USwj9WNXBpQ1au4HOBdAq8LXXWFIcsW+5dsdFHyVdk10AQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -20,21 +31,96 @@
             })
         }
     </script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Legado do Frei Rui Guido Depiné</title>
 </head>
 
 <body>
-    <div class="page-header">
-        {% if user.is_authenticated %}
-        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        {% endif %}
-        <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
+    <header class=" text-white">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="{% static 'logo.png' %}" width="170" height="170" alt="Legado Frei Rui, contornos do Frei Rui">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="drop-fonts px-2 text-bg collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Quem Somos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="quem-somos.html">Quem Somos</a></li>
+                                <li><a class="dropdown-item" href="carisma-franciscano.html">Carisma Franciscano</a>
+                                </li>
+                            </ul>
+
+
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="biografia.html">Biografia</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="homilias.html">Homilias</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="textos.html">Textos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="poesias.html">Poesias</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="depoimentos.html">Depoimentos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="historias-frei-rui.html">Historias do Frei Rui</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="eventos.html">Eventos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="acoes-culturais.html">Cultura</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="acoes-ajuda-ao-proximo.html">Ajuda ao proximo</a>
+                        </li>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    {% if user.is_authenticated %}
+    <a href="{% url 'post_new' %}" class="top-menu" style="margin-top: 50px; margin-left: 50px; display: block;">
+        <i class="far fa-plus-square fa-5x"></i>
+        <p> Criar post </p>
+    </a>
+    {% endif %}
+
     <div class="content container">
         <div class="row">
-            <!-- div class="col-md-8" -->
             {% block content %}
             {% endblock %}
-            <!-- /div -->
         </div>
     </div>
 </body>
