Add markdown parsing in django

--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -19,17 +19,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.3.0/markdown-it.min.js"
-        integrity="sha512-q1tclxbgrDhFhGp/i9mnxITl2FQ3TCfwNj0mZ1r2USwj9WNXBpQ1au4HOBdAq8LXXWFIcsW+5dsdFHyVdk10AQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        window.onload = () => {
-            const postsRaw = [...document.getElementsByClassName('post-cruncher')]
-            postsRaw.forEach((rawPost) => {
-                // Converte o markdown dos posts em html
-                rawPost.innerHTML = window.markdownit().render(rawPost.innerHTML)
-            })
-        }
+        // window.onload = () => {
+        //     const postsRaw = [...document.getElementsByClassName('post-cruncher')]
+        //     postsRaw.forEach((rawPost) => {
+        //         // Converte o markdown dos posts em html
+        //         rawPost.innerHTML = window.markdownit().render(rawPost.innerHTML)
+        //     })
+        // }
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
