--- a/FreiRui/static/style.css
+++ b/FreiRui/static/style.css
@@ -225,6 +225,10 @@ footer {
   background: #b7cde2 !important;
 }
 
+label[for="id_listing_type"] {
+  display: none;
+}
+
 /* // Dispositivos extra small (telefones em modo retrato, com menos de 576px) */
 @media (max-width: 575.98px) {
   html,
